fix hero section aligning

--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,11 @@ body {
   color: var(--text_color); }
 
 .container {
+  min-width: 32rem;
   max-width: 120rem;
   margin: auto;
-  width: 95%; }
+  height: 100%;
+  padding: 0 2rem; }
 
 section {
   padding: 10rem 0; }
@@ -436,14 +438,13 @@ textarea {
   padding: 0;
   background-color: var(--bg_color); }
   .hero__intro {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 3rem; }
+    justify-content: center;
+    gap: 3rem;
+    padding: 0 6rem; }
 
 .about {
   background-image: linear-gradient(135deg, var(--first-gradient) 0%, var(--second-gradient-bg) 100%);
