--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -7,13 +7,12 @@
   background-color: var(--bg_color);
 
   &__intro {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 3rem;
+    padding: 0 6rem;
   }
 }
